--- a/appspec.yml
+++ b/appspec.yml
@@ -2,10 +2,21 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /var/www/html
-
+    destination: /home/ec2-user/angular-app
 hooks:
+  BeforeInstall:
+    - location: scripts/install_dependencies.sh
+      timeout: 300
+      runas: root
   AfterInstall:
-    - location: scripts/restart_server.sh
+    - location: scripts/copy_files.sh
+      timeout: 300
+      runas: root
+  ApplicationStart:
+    - location: scripts/start_server.sh
+      timeout: 300
+      runas: root
+  ValidateService:
+    - location: scripts/validate_service.sh
       timeout: 300
       runas: root
