--- a/appspec.yml
+++ b/appspec.yml
@@ -7,3 +7,6 @@ hooks:
   BeforeInstall:
     - location: scripts/install_dependencies.sh
       runas: root
+  AfterInstall:
+    - location: scripts/start_server.sh
+      runas: root
